--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
 
-    <title>Dr Khan's Clinic</title>
+    <title>The Astrologer's</title>
     <link
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
